src/objects/Row__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Container__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Controls the class style applied to a row.</description>
        <inlineHelpText>Choose the Primary, Secondary, or Tertiary style for this row. If this field is blank, the row will be white.</inlineHelpText>
        <label>Color</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Content_Container__c.Type__c</field>
                <operation>equals</operation>
                <value>Style</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Content_Container__c</referenceTo>
        <relationshipLabel>Rows</relationshipLabel>
        <relationshipName>Rows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enforce_Uniform_Height__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Ensures all Row Elements inside of this Row line up in a Grid.</inlineHelpText>
        <label>Snap to Grid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What is the background image for this row?</description>
        <inlineHelpText>What is the background image for this row?</inlineHelpText>
        <label>Background Image</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Image__c.Type__c</field>
                <operation>equals</operation>
                <value>Background Image</value>
            </filterItems>
            <infoMessage>Please select the background image for row.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Image__c</referenceTo>
        <relationshipName>Rows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Page</label>
        <referenceTo>Page__c</referenceTo>
        <relationshipName>Rows</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Row__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Row</label>
        <referenceTo>Template_Row__c</referenceTo>
        <relationshipName>Rows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <inlineHelpText>The order each row will display vertically on on the page from top to bottom.</inlineHelpText>
        <label>Display Order</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Row</label>
    <nameField>
        <label>Row Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Background_Image_and_Color</fullName>
        <active>true</active>
        <description>This rule makes the Color field required if a background image has been selected.</description>
        <errorConditionFormula>AND(  Image__c  != null , ISBLANK(  Container__c  ) )</errorConditionFormula>
        <errorDisplayField>Container__c</errorDisplayField>
        <errorMessage>Please select a color for this row or remove the background image.</errorMessage>
    </validationRules>
</CustomObject>